@@ -1,6 +1,6 @@
 /* sdas.c
 
-   Copyright (C) 2009 Borut Razem
+   Copyright (C) 2009-2010 Borut Razem
 
 This program is free software; you can redistribute it and/or modify it
 under the terms of the GNU General Public License as published by the
